[package]
name = "macron"
description = "Comprehensive Rust macros toolkit for everyday development tasks. Includes convenient string formatting (str!), regex pattern matching (re!), streamlined collection creation, and custom derive macros for Display, Error, From, and Into traits. Boost your productivity with intuitive syntax and simplify your codebase while maintaining performance and safety. Perfect for both small projects and large-scale applications."
keywords = ["macros", "macro", "proc", "derive", "declarative"]
categories = ["development-tools", "rust-patterns"]
version = "0.1.1"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-macron"
readme = "README.md"
edition = "2021"

[dependencies]
macron-collections = { version = "0.1.0", optional = true }
macron-impl-display = { version = "0.1.0", optional = true }
macron-impl-error = { version = "0.1.0", optional = true }
macron-impl-from = { version = "0.1.0", optional = true }
macron-impl-into = { version = "0.1.0", optional = true }
macron-regex = { version = "0.1.0", optional = true }
macron-str = { version = "0.1.0", optional = true }

[features]
string = ["macron-str", "macron-regex"]
collections = ["macron-collections"]
derive = ["macron-impl-display", "macron-impl-error", "macron-impl-from", "macron-impl-into"]
