[package]
name = "macron"
description = "Comprehensive Rust macros toolkit for everyday development tasks. Includes convenient string formatting (str!), regex pattern matching (re!), streamlined collection creation, and custom derive macros for Display, Error, From, and Into traits. Boost your productivity with intuitive syntax and simplify your codebase while maintaining performance and safety. Perfect for both small projects and large-scale applications."
keywords = ["macros", "macro", "proc", "derive", "declarative"]
categories = ["development-tools", "rust-patterns"]
version = "0.1.6"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-macron"
readme = "README.md"
edition = "2021"

[dependencies]
macron-map = { version = "0.1.1", optional = true }
macron-collections = { version = "0.1.3", optional = true, features = ["from_macron"] }
macron-impl-display = { version = "0.1.1", optional = true }
macron-impl-error = { version = "0.1.1", optional = true }
macron-impl-from = { version = "0.1.1", optional = true }
macron-impl-into = { version = "0.1.1", optional = true }
macron-regex = { version = "0.1.0", optional = true }
macron-str = { version = "0.1.1", optional = true }
macron-input = { version = "0.1.0", optional = true }
macron-inputln = { version = "0.1.0", optional = true }

[features]
string = ["dep:macron-str", "dep:macron-regex"]
input = ["dep:macron-input", "dep:macron-inputln"]
collections = ["dep:macron-map", "dep:macron-collections"]
derive = ["dep:macron-impl-display", "dep:macron-impl-error", "dep:macron-impl-from", "dep:macron-impl-into"]

full = ["string", "input", "collections", "derive"]
