[package]
name = "macron-collections"
description = "Creates a new instance of std collections: HashMap, HashSet, BTreeMap, BTreeSet, VecDeque, LinkedList and BinaryHeap"
keywords = ["macros", "macro", "declarative"]
categories = ["development-tools", "rust-patterns"]
version = "0.1.3"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-macron/tree/main/macron-collections"
readme = "README.md"
edition = "2021"

[dependencies]
macron-map = "0.1.1"

[features]
from_macron = []
