[package]
name = "macron-impl-from"
description = "The implementation of trait From"
keywords = ["macros", "macro", "proc", "derive"]
categories = ["development-tools", "rust-patterns"]
version = "0.1.1"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-macron/tree/main/macron-impl-from"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.39"
syn = "2.0.99"
proc-macro2 = "1.0.94"
