[package]
name = "macron-impl-into"
description = "The implementation of trait Into"
version = "0.1.0"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-macron/tree/main/macron-impl-into"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.39"
syn = "2.0.99"
proc-macro2 = "1.0.94"
