[package]
name = "macron-input"
description = "Reads user input lines from the console"
keywords = ["macros", "macro", "proc"]
categories = ["development-tools", "rust-patterns"]
version = "0.1.1"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-macron/tree/main/macron-input"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.39"
syn = { version = "2.0.100", features = ["parsing"] }
