[package]
name = "macron-path"
description = "Creates a new instance of PathBuf"
keywords = ["macros", "proc", "path", "dir", "file"]
categories = ["development-tools", "rust-patterns"]
version = "0.1.2"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-macron/tree/main/macron-path"
readme = "README.md"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.39"
syn = { version = "2.0.100", features = ["parsing"] }
