[package]
name = "macron-str"
description = "Creates a new instance of String"
version = "0.1.0"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-macron/tree/main/macron-str"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.39"
syn = { version = "2.0.100", features = ["parsing"] }
